# 1liner

./: .gitignore  README.md  mymodel.py  pyproject.toml  requirements.txt  ruff.toml  viam_wrap.py  wrapper.py
.github/workflows/: lint.yml
examples/: classless.py  classless.sh  frombase.py  installable.py  mymodel.py  stubs.py
