[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "viam-wrap"
dependencies = [
  "viam-sdk>=0.15.0",
]
dynamic = ["version"]

[tools.setuptools]
py_modules = ["viam_wrap"]

[project.scripts]
viam-wrap = "viam_wrap:main"

[tools.setuptools_scm]
